--- a/index.html
+++ b/index.html
@@ -7,18 +7,58 @@
 </head>
 <body>
 
+<!-- *******"NAV"BAR******* -->
+
 	<nav class="navbar navbar-fixed-top">
 	  	<p class="navbar-brand">Chatty!</p>
 	  	<form class="navbar-form navbar-left">
 	  	<div class="form-group contianer-fluid">
 	  		<input type="text" id="message-input" class="form-control" placeholder="Type Message - press Return Key to post">
 	  		<button type="button" id="clear-messages" class="btn btn-default">Clear Messages</button>
-	  		<button type="button" id="theme-button" class="btn btn-default">Change Theme</button>
+	  		<button type="button" class="btn btn-default" data-toggle="modal" id="theme-button" data-target="#myModal">Change Theme</button>
 	  	</div>
 	  </form>
 	 </nav>
 
+<!-- *******MESSAGE BOARD******* -->
+
 	 <div id="message-board" class="container"></div>
+
+<!-- *******MODAL*******
+ -->
+<div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Chose Yo Theme</h4>
+      </div>
+      <div class="modal-body">
+        <div class="radio">
+  			<label><input type="radio" name="optradio">Bob Ross</label>
+		</div>
+		<div class="radio">
+  			<label><input type="radio" name="optradio">Catty</label>
+		</div>
+		<div class="radio disabled">
+  			<label><input type="radio" name="optradio" disabled>Star Wars</label>
+		</div>
+		<div class="radio disabled">
+  			<label><input type="radio" name="optradio" disabled>Pie</label>
+		</div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+
+<!-- *******SCRIPT TAGS******* -->
 
 	<script src="https://code.jquery.com/jquery-3.2.1.js"
 	  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
@@ -27,5 +67,6 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	<script type="text/javascript" src="dist/app.js"></script>
+	
 </body>
 </html>
