--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>Chatty!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 <body>
@@ -10,7 +12,7 @@
 <!-- *******"NAV"BAR******* -->
 
 	<nav class="navbar navbar-fixed-top">
-	  	<p class="navbar-brand">Chatty!</p>
+	  	<p class="navbar-brand logo">Chatty!</p>
 	  	<form class="navbar-form navbar-left">
 	  	<div class="form-group contianer-fluid">
 	  		<input type="text" id="message-input" class="form-control" placeholder="Type Message - press Return Key to post">
@@ -43,10 +45,10 @@
   			<label><input type="radio" name="optradio">Catty</label>
 		</div>
 		<div class="radio disabled">
-  			<label><input type="radio" name="optradio" disabled>Star Wars</label>
+  			<label><input type="radio" name="optradio" disabled>Darth Theme</label>
 		</div>
 		<div class="radio disabled">
-  			<label><input type="radio" name="optradio" disabled>Pie</label>
+  			<label><input type="radio" name="optradio" disabled>Magical</label>
 		</div>
       </div>
       <div class="modal-footer">
