--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	 crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="styles/catty.css">
 </head>
 
 <body class="red" id="body">
@@ -27,7 +27,8 @@
 
 	<!-- *******MESSAGE BOARD******* -->
 
-	<div id="message-board" class="container"></div>
+	<div id="message-board" class="container cat-container"></div>
+
 
 	<!-- *******MODAL*******
  -->
@@ -47,11 +48,14 @@
 					<div class="radio">
 						<label><input type="radio" name="optradio" id="catty">Catty</label>
 					</div>
-					<div class="radio disabled">
+					<div class="radio">
 						<label><input type="radio" name="optradio" id="darth">Darth Theme</label>
 					</div>
-					<div class="radio disabled">
+					<div class="radio">
 						<label><input type="radio" name="optradio" id="magical">Magical</label>
+					</div>
+					<div class="radio">
+						<label><input type="radio" name="optradio" id="normal">Normal</label>
 					</div>
 				</div>
 				<div class="modal-footer">
@@ -62,6 +66,11 @@
 		</div>
 	</div>
 
+	<!-- *******CAT BUTTON******* -->
+
+	<div id="cat-button">
+		<button type="button" class="hidden-cat btn btn-default" id="catBtn">Randomize Me Kitty!</button>
+	</div>
 
 	<!-- *******SCRIPT TAGS******* -->
 
