--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	 crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Schoolbell" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/catty.css">
 </head>
 
@@ -19,8 +20,8 @@
 		<form class="navbar-form navbar-left">
 			<div class="form-group contianer-fluid">
 				<input type="text" id="message-input" class="form-control" placeholder="Type Message - press Return Key to post">
-				<button type="button" id="clear-messages" class="btn btn-default">Clear Messages</button>
-				<button type="button" class="btn btn-default" data-toggle="modal" id="theme-button" data-target="#myModal">Change Theme</button>
+				<button type="button" id="clear-messages" class="btn btn-default cat-clear">Clear Messages</button>
+				<button type="button" class="btn btn-default cat-theme" data-toggle="modal" id="theme-button" data-target="#myModal">Change Theme</button>
 			</div>
 		</form>
 	</nav>
@@ -69,7 +70,7 @@
 	<!-- *******CAT BUTTON******* -->
 
 	<div id="cat-button">
-		<button type="button" class="hidden-cat btn btn-default" id="catBtn">Randomize Me Kitty!</button>
+		<button type="button" class="hidden-cat btn btn-default cat-random" id="catBtn">Randomize Me Kitty!</button>
 	</div>
 
 	<!-- *******SCRIPT TAGS******* -->
