--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Schoolbell" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styles/catty.css">
+	<link rel="stylesheet" type="text/css" href="styles/main.css">
 </head>
 
 <body class="red" id="body">
