--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="styles/darth.css" data-active-stylesheet>
+	<link rel="stylesheet" type="text/css" href="styles/main.css" data-active-stylesheet>
 
 </head>
 
