--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 	<title>Chatty!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	 crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:900" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand|Source+Code+Pro:900|Vibur" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/main.css" data-active-stylesheet>
 
 </head>
