Fixed Change Theme button on bobRoss and adjusted message div display style

--- a/index.html
+++ b/index.html
@@ -5,13 +5,10 @@
 	<title>Chatty!</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	 crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Shrikhand|Vibur" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/main.css" data-active-stylesheet>
 
 </head>
-
-<body class="red" id="body">
 
 	<!-- *******"NAV"BAR******* -->
 
@@ -21,7 +18,7 @@
 			<div class="form-group contianer-fluid">
 				<input type="text" id="message-input" class="form-control" placeholder="Type Message - press Return Key to post">
 				<button type="button" id="clear-messages" class="btn btn-default cat-clear">Clear Messages</button>
-				<button type="button" class="btn btn-default cat-theme" data-toggle="modal" id="theme-button" data-target="#myModal">Change Theme</button>
+				<button type="button" class="btn btn-default" data-toggle="modal" id="theme-button" data-target="#myModal">Change Theme</button>
 			</div>
 		</form>
 	</nav>
