--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="form-group contianer-fluid">
 				<input type="text" id="message-input" class="form-control" placeholder="Type Message - press Return Key to post">
 				<button type="button" id="clear-messages" class="btn btn-default cat-clear">Clear Messages</button>
-				<button type="button" class="btn btn-default" data-toggle="modal" id="theme-button" data-target="#myModal">Change Theme</button>
+				<button type="button" class="btn btn-default cat-theme" data-toggle="modal" id="theme-button" data-target="#myModal">Change Theme</button>
 			</div>
 		</form>
 	</nav>
